# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import columnsRouter from "./columns";
+import tasksRouter from "./tasks";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(columnsRouter);
+router.use(tasksRouter);
 
 export default router;
